Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/inward/inward_edit_bht.xhtml
+++ b/src/main/webapp/inward/inward_edit_bht.xhtml
@@ -30,6 +30,7 @@
                             <p:column>
                                 <h:outputLabel value="#{myItem.patient.person.name}"/>
                             </p:column>
+                            <p:ajax process="@this"></p:ajax>
                         </p:autoComplete> 
                         <p:commandButton ajax="false" value="Display Details" />
                             
