--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
@@ -39,7 +39,7 @@
                         </p:panel>
                         <div class="row">
                             <div class="col-md-7">
-                                <p:panel style="height: 1125px;">
+                                <p:panel style="height: 1055px;" class="w-100">
                                     <f:facet name="header" >
                                         <h:outputLabel value="Pharmacy Retail Bill(Sale 3)" />
                                     </f:facet>
@@ -50,7 +50,7 @@
                                                 <p:outputLabel value="Medicines/Devices" ></p:outputLabel>
                                                 <style>
                                                     .ui-autocomplete-input {
-                                                        width:350px!important;
+                                                        width:300px!important;
                                                         display: block;
                                                     }
                                                     .ui-autocomplete{
@@ -99,29 +99,32 @@
                                             </h:panelGrid>
 
                                             <h:panelGrid columns="1" >
-                                                <p:outputLabel value="Quentity" ></p:outputLabel>
-                                                <p:inputText  accesskey="q"  autocomplete="off" id="txtQty" value="#{pharmacySaleController2.intQty}" style="width: 50px!important;">
+                                                <p:outputLabel value="Quantity" ></p:outputLabel>
+                                                <p:inputText  accesskey="q"  autocomplete="off" id="txtQty" value="#{pharmacySaleController2.intQty}" style="width: 60px!important;">
                                                     <p:ajax event="keyup"  listener="#{pharmacySaleController2.calculateBillItemListner}" process="acStock txtQty :#{p:resolveFirstComponentWithId('cmbPs',view).clientId}" update="txtRate txtVal" ></p:ajax>
                                                     <p:ajax event="blur"  listener="#{pharmacySaleController2.calculateBillItemListner}" process="acStock txtQty :#{p:resolveFirstComponentWithId('cmbPs',view).clientId}" update="txtRate txtVal" ></p:ajax>
                                                 </p:inputText>
                                             </h:panelGrid>
 
+                                            <h:panelGrid columns="1">
+                                                <p:outputLabel></p:outputLabel>
                                             <p:commandButton  accesskey="a" id="btnAdd" value="Add" 
                                                               action="#{pharmacySaleController2.addBillItemNew()}" 
                                                               process="@this acStock txtQty :#{p:resolveFirstComponentWithId('cmbPs',view).clientId}" 
                                                               update=":#{p:resolveFirstComponentWithId('netTotal',view).clientId} :#{p:resolveFirstComponentWithId('dis',view).clientId} :#{p:resolveFirstComponentWithId('total',view).clientId} :#{p:resolveFirstComponentWithId('pBillDetails',view).clientId} :#{p:resolveFirstComponentWithId('tblBillItem',view).clientId} txtRate txtQty acStock focusItem :#{p:resolveFirstComponentWithId('tabI',view).clientId} :#{p:resolveFirstComponentWithId('panelError',view).clientId}" ></p:commandButton>
-
-                                            <h:panelGrid columns="1" >
-                                                <p:outputLabel value="Rate" ></p:outputLabel>
-                                                <p:outputLabel id="txtRate" value="#{pharmacySaleController2.billItem.netRate}" >
-                                                    <f:convertNumber pattern="#,##0.00" />
-                                                </p:outputLabel>
+                                                              
                                             </h:panelGrid>
-                                            <h:panelGrid columns="1" >
-                                                <p:outputLabel value="Value" ></p:outputLabel>
-                                                <p:outputLabel id="txtVal" value="#{pharmacySaleController2.billItem.netValue}" >
+                                            <h:panelGrid columns="1" class="w-100">
+                                                <p:outputLabel  value="Rate" ></p:outputLabel>
+                                                <p:inputText  id="txtRate" value="#{pharmacySaleController2.billItem.netRate}" >
                                                     <f:convertNumber pattern="#,##0.00" />
-                                                </p:outputLabel>
+                                                </p:inputText >
+                                            </h:panelGrid>
+                                            <h:panelGrid columns="1" class="w-100">
+                                                <p:outputLabel value="Value" ></p:outputLabel>
+                                                <p:inputText  id="txtVal" value="#{pharmacySaleController2.billItem.netValue}" >
+                                                    <f:convertNumber pattern="#,##0.00" />
+                                                </p:inputText>
                                             </h:panelGrid>
                                             <p:focus id="focusQty" for="txtQty" ></p:focus>
                                             <p:focus id="focusItem" for="acStock" ></p:focus>
